Updated Prototype using Glide, Google Sheets and Canva

--- a/index.html
+++ b/index.html
@@ -2,74 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Portfolio of Akshay</title>
+  <title>Akshay Singh – Teaching Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <style>
-    .highlight {
-  background: #ffd60a;   /* warm yellow */
-  color: #111;
-  padding: 0.2em 0.4em;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
+    /* ---------- Base ---------- */
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       margin: 0;
       padding: 0;
-      line-height: 1.6;
+      line-height: 1.7;
       background: #fafafa;
       color: #222;
-    }
-
-    header {
-      padding: 3rem 2rem;
-      background: #111;
-      color: #fff;
-    }
-
-    header h1 {
-      margin-bottom: 0.5rem;
-      font-size: 2.2rem;
-    }
-
-    header p {
-      max-width: 700px;
-      opacity: 0.9;
-    }
-
-    section {
-      padding: 3rem 2rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    h2 {
-      margin-bottom: 1rem;
-      border-bottom: 2px solid #ddd;
-      padding-bottom: 0.3rem;
-    }
-
-    .card {
-      background: #fff;
-      padding: 1.8rem;
-      margin: 1.5rem 0;
-      border-left: 4px solid #444;
-    }
-
-    .card h3 {
-      margin-top: 0;
-    }
-
-    .meta {
-      font-size: 0.95rem;
-      color: #555;
-      margin-bottom: 0.8rem;
-    }
-
-    ul {
-      padding-left: 1.2rem;
     }
 
     a {
@@ -78,176 +22,265 @@
       font-weight: 500;
     }
 
-    footer {
-      padding: 2rem;
-      background: #eee;
-      text-align: center;
-      font-size: 0.9rem;
+    p, li {
+      max-width: 720px;
+    }
+
+    /* ---------- Containers ---------- */
+    .container {
+      max-width: 900px;
+      margin: auto;
+      padding: 0 2rem;
+    }
+
+    section {
+      padding: 4rem 0;
+    }
+
+    /* ---------- Header / Hero ---------- */
+    header {
+      background: #111;
+      color: #fff;
+      padding: 5rem 0;
+    }
+
+    header h1 {
+      font-size: 2.4rem;
+      margin-bottom: 1rem;
+      letter-spacing: -0.5px;
     }
 
     .hero-subtitle {
-  font-size: 1.05rem;
-  color: #ddd;
-  max-width: 720px;
-}
+      font-size: 1.05rem;
+      color: #ddd;
+    }
 
-.hero-highlight {
-  display: inline-block;
-  background: #ffd60a;
-  color: #111;
-  padding: 0.5rem 0.9rem;
-  margin: 0.8rem 0;
-  font-size: 1.2rem;
-  font-weight: 700;
-  letter-spacing: 0.3px;
-  border-radius: 6px;
-}
+    .hero-highlight {
+      display: inline-block;
+      background: #ffd60a;
+      color: #111;
+      padding: 0.55rem 1rem;
+      margin: 1rem 0;
+      font-size: 1.2rem;
+      font-weight: 700;
+      letter-spacing: 0.3px;
+      border-radius: 6px;
+    }
 
+    /* ---------- Headings ---------- */
+    h2 {
+      font-size: 1.6rem;
+      margin-bottom: 1.2rem;
+      letter-spacing: -0.3px;
+      border-bottom: 2px solid #e0e0e0;
+      padding-bottom: 0.4rem;
+    }
 
+    h3 {
+      margin-top: 0;
+      font-size: 1.2rem;
+    }
+
+    /* ---------- Cards ---------- */
+    .card {
+      background: #fff;
+      padding: 2rem;
+      margin: 2.5rem 0;
+      border-left: 3px solid #ddd;
+    }
+
+    .meta {
+      font-size: 0.95rem;
+      color: #555;
+      margin-bottom: 1rem;
+    }
+
+    ul {
+      padding-left: 1.2rem;
+    }
+
+    /* ---------- Footer ---------- */
+    footer {
+      background: #eee;
+      padding: 2.5rem 0;
+      font-size: 0.95rem;
+    }
   </style>
 </head>
 
 <body>
 
-<header>
-  <h1>Low-Code & Advanced Prototyping</h1>
-<p class="hero-subtitle">
-  Portfolio demonstrating how learners are guided to move from
-</p>
+  <!-- ================= HERO ================= -->
+  <header>
+    <div class="container">
+      <h1>Low-Code & Advanced Prototyping</h1>
 
-<div class="hero-highlight">
-  ideas → logic → interactive digital experiences
-</div>
+      <p class="hero-subtitle">
+        Portfolio demonstrating how learners are guided to move from
+      </p>
 
-<p class="hero-subtitle">
-  using low-code and advanced prototyping tools.
-</p>
+      <div class="hero-highlight">
+        ideas → logic → interactive digital experiences
+      </div>
 
-</header>
+      <p class="hero-subtitle">
+        using low-code and advanced prototyping tools.
+      </p>
+    </div>
+  </header>
 
-<section>
-  <h2>About the Faculty</h2>
-  <p>Industry practitioner with over 10 years of experience across diverse technology stacks, and a Toastmasters mentor and coach guiding youth exploring careers in digital design and technology. Teaching is a passion I deeply enjoy, with an approach centered on building clarity around logic, interaction, and system thinking—rather than code complexity.
+  <!-- ================= ABOUT ================= -->
+  <section>
+    <div class="container">
+      <h2>About the Faculty</h2>
 
-  </p>
-</section>
+      <p>
+        Industry practitioner with over a decade of experience across diverse
+        technology stacks, and a Toastmasters mentor and coach guiding youth
+        exploring careers in digital design and technology.</p>
+        
+        <p>I have served as a Visiting Faculty at SIES College, teaching computer skills, 
+            digital tools and advance office skills. Have also conducted workshops for low code no code 
+            platforms among Toastmasters community for design prototyping, website building and digital solutions.
+      </p>
 
-<section>
-  <h2>Teaching Philosophy</h2>
-  <ul>
-    <li>Start with intent and user experience, not tools</li>
-    <li>Use low-code to accelerate learning, not bypass understanding</li>
-    <li>Translate design decisions into logic and systems</li>
-    <li>Create prototypes that are testable, explainable, and maintainable</li>
-  </ul>
-</section>
+      <p>
+        My teaching approach emphasizes clarity of thinking—helping learners
+        understand logic, interaction, and system behavior rather than focusing
+        on code complexity.
+      </p>
+    </div>
+  </section>
 
-<section>
-  <h2>Sample Assignments – Prototyping Portfolio</h2>
+  <!-- ================= PHILOSOPHY ================= -->
+  <section>
+    <div class="container">
+      <h2>Teaching Philosophy</h2>
 
-  <!-- Assignment 1 -->
-  <div class="card">
-    <h3>Assignment 1: Low-Code MVP – Workshop Registration System</h3>
-    <p class="meta">
-      Key Areas: Low-Code Platforms · Rapid Prototyping · Database Integration · Dynamic Content
-    </p>
+      <ul>
+        <li>Start with intent and user experience, not tools</li>
+        <li>Use low-code to accelerate learning, not bypass understanding</li>
+        <li>Translate design decisions into logic and systems</li>
+        <li>Create prototypes that are testable, explainable, and maintainable</li>
+      </ul>
+    </div>
+  </section>
 
-    <p><strong>Assignment Brief:</strong><br>
-      Students design a functional MVP for a creative workshop where users can register
-      and view confirmation details dynamically.
-    </p>
+  <!-- ================= ASSIGNMENTS ================= -->
+  <section>
+    <div class="container">
+      <h2>Sample Assignments – Prototyping Portfolio</h2>
 
-    <p><strong>Prototype Focus:</strong></p>
-    <ul>
-      <li>Form-based UI connected to a simple database</li>
-      <li>Dynamic confirmation screen</li>
-      <li>Auto-updating attendee list</li>
-    </ul>
+      <!-- Assignment 1 -->
+      <div class="card">
+        <h3>Assignment 1: Low-Code MVP – Workshop Registration System</h3>
+        <p class="meta">
+          Key Areas: Low-Code Platforms · Rapid Prototyping · Database Integration · Dynamic Content
+        </p>
 
-    <p><strong>Learning Outcomes:</strong></p>
-    <ul>
-      <li>Understand UI → data → UI flow</li>
-      <li>Experience real MVP thinking</li>
-      <li>Differentiate static mockups from working prototypes</li>
-    </ul>
+        <p><strong>Assignment Brief:</strong><br>
+          Students design a functional MVP for a creative workshop where users can
+          register and view confirmation details dynamically.
+        </p>
 
-    <p><strong>Tools:</strong> Glide / Webflow CMS / Google Sheets</p>
-    <p><a href="#">View Prototype</a></p>
-  </div>
+        <p><strong>Prototype Focus:</strong></p>
+        <ul>
+          <li>Form-based UI connected to a simple database</li>
+          <li>Dynamic confirmation screen</li>
+          <li>Auto-updating attendee list</li>
+        </ul>
 
-  <!-- Assignment 2 -->
-  <div class="card">
-    <h3>Assignment 2: Advanced Interactive Prototype – Course Enrollment Flow</h3>
-    <p class="meta">
-      Key Areas: Advanced Prototyping · Conditional Logic · Developer Handoff
-    </p>
+        <p><strong>Learning Outcomes:</strong></p>
+        <ul>
+          <li>Understand UI → data → UI flow</li>
+          <li>Experience real MVP thinking</li>
+          <li>Differentiate static mockups from working prototypes</li>
+        </ul>
 
-    <p><strong>Assignment Brief:</strong><br>
-      Students create a high-fidelity prototype for a course enrollment and checkout
-      experience, including success and error states.
-    </p>
+        <p><strong>Tools:</strong> Glide / Webflow CMS / Google Sheets</p>
+        <p><a href="https://www.canva.com/design/DAG8pCRoVEQ/1b8fkcZkaqHv0QwyIiobzA/view?utm_content=DAG8pCRoVEQ&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h4a8a805681">View Prototype</a></p>
+      </div>
 
-    <p><strong>Prototype Focus:</strong></p>
-    <ul>
-      <li>Conditional logic for form validation</li>
-      <li>Micro-interactions and loading states</li>
-      <li>Realistic UX transitions</li>
-    </ul>
+      <!-- Assignment 2 -->
+      <div class="card">
+        <h3>Assignment 2: Advanced Interactive Prototype – Course Enrollment Flow</h3>
+        <p class="meta">
+          Key Areas: Advanced Prototyping · Conditional Logic · Developer Handoff
+        </p>
 
-    <p><strong>Learning Outcomes:</strong></p>
-    <ul>
-      <li>Designing for real-world interactions</li>
-      <li>Communicating intent to developers</li>
-      <li>Understanding UX impact on implementation</li>
-    </ul>
+        <p><strong>Assignment Brief:</strong><br>
+          Students create a high-fidelity prototype for a course enrollment and
+          checkout experience, including success and error states.
+        </p>
 
-    <p><strong>Tools:</strong> Figma (Smart Animate, Variables)</p>
-    <p><a href="#">View Prototype</a></p>
-  </div>
+        <p><strong>Prototype Focus:</strong></p>
+        <ul>
+          <li>Conditional logic for form validation</li>
+          <li>Micro-interactions and loading states</li>
+          <li>Realistic UX transitions</li>
+        </ul>
 
-  <!-- Assignment 3 -->
-  <div class="card">
-    <h3>Assignment 3: Dynamic Dashboard – Personalized Student Experience</h3>
-    <p class="meta">
-      Key Areas: Conditional Logic · Dynamic Content · User Testing
-    </p>
+        <p><strong>Learning Outcomes:</strong></p>
+        <ul>
+          <li>Designing for real-world interactions</li>
+          <li>Communicating intent to developers</li>
+          <li>Understanding UX impact on implementation</li>
+        </ul>
 
-    <p><strong>Assignment Brief:</strong><br>
-      Students design a dashboard that adapts content based on user preferences,
-      progress, and skill level.
-    </p>
+        <p><strong>Tools:</strong> Figma (Smart Animate, Variables)</p>
+        <p><a href="#">View Prototype</a></p>
+      </div>
 
-    <p><strong>Prototype Focus:</strong></p>
-    <ul>
-      <li>Conditional content display</li>
-      <li>User input handling</li>
-      <li>Adaptive UI states</li>
-    </ul>
+      <!-- Assignment 3 -->
+      <div class="card">
+        <h3>Assignment 3: Dynamic Dashboard – Personalized Student Experience</h3>
+        <p class="meta">
+          Key Areas: Conditional Logic · Dynamic Content · User Testing
+        </p>
 
-    <p><strong>User Testing:</strong></p>
-    <ul>
-      <li>Task-based testing with 2 users</li>
-      <li>Observations documented and iterated</li>
-    </ul>
+        <p><strong>Assignment Brief:</strong><br>
+          Students design a dashboard that adapts content based on user preferences,
+          progress, and skill level.
+        </p>
 
-    <p><strong>Learning Outcomes:</strong></p>
-    <ul>
-      <li>Designing systems, not screens</li>
-      <li>Testing assumptions through interaction</li>
-      <li>Iterating based on feedback</li>
-    </ul>
+        <p><strong>Prototype Focus:</strong></p>
+        <ul>
+          <li>Conditional content display</li>
+          <li>User input handling</li>
+          <li>Adaptive UI states</li>
+        </ul>
 
-    <p><strong>Tools:</strong> Figma / Glide</p>
-    <p><a href="#">View Prototype</a></p>
-  </div>
+        <p><strong>User Testing:</strong></p>
+        <ul>
+          <li>Task-based testing with 2 users</li>
+          <li>Observations documented and iterated</li>
+        </ul>
 
-</section>
+        <p><strong>Learning Outcomes:</strong></p>
+        <ul>
+          <li>Designing systems, not screens</li>
+          <li>Testing assumptions through interaction</li>
+          <li>Iterating based on feedback</li>
+        </ul>
 
-<footer>
-  <p>
-    LinkedIn: <a href="https://www.linkedin.com/in/akshaysinghnew/">Akshay Singh, DTM</a> ·
-  </p>
-</footer>
+        <p><strong>Tools:</strong> Figma / Glide</p>
+        <p><a href="#">View Prototype</a></p>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- ================= FOOTER ================= -->
+  <footer>
+    <div class="container">
+      <p>
+        LinkedIn:
+        <a href="https://www.linkedin.com/in/akshaysinghnew/" target="_blank">
+          Akshay Singh, DTM
+        </a>
+      </p>
+    </div>
+  </footer>
 
 </body>
 </html>
