--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
         </ul>
 
         <p><strong>Tools:</strong> Figma (Smart Animate, Variables)</p>
-        <p><a href="#">View Prototype</a></p>
+        <p><a href="https://www.figma.com/design/zh5IR0l4i5i74vbmO8HERD/Course-Enrollment-%E2%80%93-Advanced-Prototype?node-id=0-1&t=IpMA7ry7QnU9PiHF-1">View Prototype</a></p>
+        <p><a href="https://www.canva.com/design/DAG8rTInAVE/PjqlWMMBoGmNngnvZMeRdQ/view?utm_content=DAG8rTInAVE&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h9ad8607e39">View Figma Working Screen Snapshot</a></p>
+        
       </div>
 
       <!-- Assignment 3 -->
